packages/astro/e2e/fixtures/errors/src/components/AstroGlobOutsideAstro.js
export function globSomething(Astro) {
  return Astro.glob('./*.lua')
}
